--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--custom : rha6780-->
+    <color name="Transparency">#00FF0000</color>
+    <color name="LightGray">#F09D9C9C</color>
 </resources>
