--- a/app/src/main/res/layout/map_fragment_layout.xml
+++ b/app/src/main/res/layout/map_fragment_layout.xml
@@ -33,9 +33,14 @@
         android:id="@+id/contentslayout"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_margin="10dp"
-
-        android:layout_above="@id/navigationBar"/>
+        android:background="@color/black"
+        android:layout_above="@id/navigationBar"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp" />
 
     <RelativeLayout
         android:id="@+id/navigationBar"
