--- a/app/src/main/res/layout/map_fragment_layout.xml
+++ b/app/src/main/res/layout/map_fragment_layout.xml
@@ -9,7 +9,9 @@
     <com.naver.maps.map.MapView
         android:id="@+id/map_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+    </com.naver.maps.map.MapView>
 
 
     <com.naver.maps.map.widget.LocationButtonView
@@ -30,17 +32,24 @@
         android:layout_alignParentRight="true" />
 
     <RelativeLayout
-        android:id="@+id/contentslayout"
+        android:id="@+id/contents_layout"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/black"
+        android:background="@color/white"
         android:layout_above="@id/navigationBar"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp" >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/station_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/navigationBar"
