list add item sample

--- a/app/src/main/res/layout/stationitem.xml
+++ b/app/src/main/res/layout/stationitem.xml
@@ -5,8 +5,19 @@
     >
 
     <TextView
-        android:id="@+id/station_name"
-        android:layout_width="match_parent"
+        android:id="@+id/station_id"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:layout_marginLeft="10dp"
+        android:text="id"/>
+
+    <TextView
+        android:id="@+id/station_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/station_id"
+        android:layout_marginLeft="10dp"
+        android:text="name" />
+
+
 </RelativeLayout>
