--- a/app/src/main/res/layout/stationitem.xml
+++ b/app/src/main/res/layout/stationitem.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="100dp"
     android:padding="10dp"
     >
 
+    <TextView
+        android:id="@+id/station_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/round_directions_bus_20" />
     <TextView
         android:id="@+id/station_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="5dp"
-        android:text="id" />
+        android:text="id"
+        android:layout_toRightOf="@id/station_img"/>
 
     <TextView
         android:id="@+id/station_name"
@@ -20,6 +26,22 @@
         android:layout_below="@id/station_id"
         android:layout_marginLeft="10dp"
         android:text="name" />
+
+    <Button
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"
+        android:background="@color/Button_color"
+        android:textColor="@color/white"
+        android:textSize="8dp"
+        android:text="위치"/>
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/station_name"
+        android:background="@color/LightGray"/>
 
 
 </RelativeLayout>
