--- a/app/src/main/res/layout/stationitem.xml
+++ b/app/src/main/res/layout/stationitem.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:padding="10dp"
     >
 
@@ -26,6 +26,7 @@
         android:layout_below="@id/station_id"
         android:layout_marginLeft="10dp"
         android:text="name" />
+
 
     <Button
         android:layout_width="30dp"
